# health-backend

./: README.md  main.py  pyproject.toml  test.py
ML_models/: ed_admit_model.joblib  ed_to_inpatient_ML.py  inpatient_duration.py  requirements.txt
templates/: hospital_view.html
utils/: ICD.py  npc_data.py  patient.py  simulation_manager.py  triage_levels.py  ward.py
