[project]
name = "health-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.2",
    "pydantic>=2.11.9",
    "sqlmodel>=0.0.25",
    "uvicorn>=0.36.0",
    "scikit-learn==1.6.1",
    "pandas==2.3.2",
    "numpy==2.3.3",
    "joblib==1.5.2",
    "matplotlib===3.10.6",
]
